--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             </div>
             <div>
                 <h3>Email</h3>
-                <p><a href="mailto:darimtyaz754@gmail.com">mailto:darimtyaz754@gmail.com</a></p>
+                <p><a href="mailto:darimtyaz754@gmail.com">darimtyaz754@gmail.com</a></p>
             </div>
         </div>
     </section>
